src/scss/extra/hpass.scss
/* ... */
@font-face {
  font-family: 'GTAmerica';
  src: url('/css/extra/fonts/GTAmerica/GT-America-Standard-Light.eot');
  src: url('/css/extra/fonts/GTAmerica/GT-America-Standard-Light.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('/css/extra/fonts/GTAmerica/GT-America-Standard-Light.woff2?v=4.3.0') format('woff2'), url('/css/extra/fonts/GTAmerica/GT-America-Standard-Light.woff?v=4.3.0') format('woff'), url('/css/extra/fonts/GTAmerica/GT-America-Standard-Light.ttf?v=4.3.0') format('truetype');
  font-weight: normal;
  font-style: normal;
}



.logo-image-url{
    width: 155px;
    height: 87px;
    background-image: url("/img/extra/hpass/logo.png");

}

.logo-image-icon-url {
    width: 155px;
    height: 87px;
    background-image: url("/img/extra/hpass/logo.png");
}

.system-image-url {
    width: 90px;
    height: 90px;
    background-image: url("/img/extra/hpass/logo_icon.png");
}

.issuedbyobf-image-url{
    width: 195px;
    height: 50px;
    background-image: url("/img/extra/hpass/issuedbyobf.png");
}

.verifiedissuedbyobf-image-url {
    width: 220px;
    height: 44px;
    background-image: url("/img/extra/hpass/verifiedissuedbyobf.png");
}


body.anon{
  background-image: url("/img/extra/hpass/background.jpg");
  background-size: cover;

  @media (max-width: 425px){
    background:none;
    overflow:scroll;
    overflow-x:hidden;
    }


    @media (max-width: 550px){
      .container.main-container {
        padding-right:unset;
        padding-left:unset;
        margin-right:unset;
        margin-left:unset;
        .green-banner{
        margin-bottom:10px;
        }
      }
    }

  #login-page {
    padding-bottom: 2px;
    .login-links {
        margin-top: 20px;
    }
    form {
	text-align: center;
	padding-top:15px;
    }
    .form-group{
	margin-right: auto;
	margin-left: auto;
	max-width: 300px;
    }
}

  a{
      text-decoration: underline;
      font-weight:bold;
      color: $text-color;

  }

  img{
       height: auto;
       width: 100%;
  }

    .container.main-container{
    width:100vw;
    margin-left: 0px;
    padding-left:0px;
  }
  #narrow-panel{
    max-width:568px;
    border-top: none;
    border-bottom: none;
    margin: 0px auto 0 auto;
    border-radius: 0;
  }

  footer.footer {

    .footer-container {
    .text-muted{
      color:#000000;
    }
    border-top:none;
    font-size: 14px;
    }
}

  #reset-password .panel-body form .btn-primary{
  color: $text-color;
  }

}

a#login-button, #login-page .btn-primary, .btn-primary:active:focus, .btn-primary:focus {
    background-color: $titlebar-color;
    border-color: $titlebar-color;
    color: #000000;
    font-weight:bold;
    box-shadow:none;
    &:hover {
        background-color: $login-button-active;
        border-color: $login-button-active;
    }
}

.btn-warning {
    background-color: $menu-active;
    border-color: $menu-active;
    &:hover {
        background-color: lighten($menu-active, 5%);
    }
}

//NAVBAR FIXED TOP
 .navbar-fixed-top {
     margin-right: 80px;
 }

ul.side-links {
    li a {
        font-size: 14px;
        color:#000000;
        text-decoration:none;
    }
    li.active a, li a:hover {
        color: $titlebar-color;
    }
    @media (max-width: 767px){
        li.active a {
            background-color: $titlebar-color;
            color: #FFF;
        }
    }
}

ul.navbar-nav li a{
  text-decoration:none;
}
.media.message-item .media-body a {
    color:$text-color;
    font-weight: bold;
}
.message-item.media h3.media-heading a{
  text-decoration:underline;
}

/*humanitarian leadership academy changes*/


#grid-filter .btn, #buttons .col-xs-8 .btn {
    background:$button-color;
    border-color:$button-color;
    line-height: 19px;
    box-shadow:none;
    color:#000000;
    font-weight: bold;
    &.btn-active {

    }
}

body {

      font-family: "GT America", "Arial", sans-serif;
      background-color: $background-color;
      color: $text-color;

    a{
      color:$text-color;
      text-decoration:underline;
    }

  #badge-info a{

    color:$text-color;
    text-decoration: underline;
  }

  #badge-stats .panel .panel-heading {

    h3{
      color:$text-color;
    }
    a{
      text-decoration:none;
      &:hover{
        color: $titlebar-color;
      }
  }
}

  #page-view .checkbox{
    color:$text-color;
  }
  #page-buttons-share .checkbox label{
    text-decoration:underline;
  }

  #content .uppercase-header {
    color:$text-color;
  }

  .endorsement-link{
  &:before{
    color:$text-color !important;
    }
  }

.pages #grid #add-element #add-element-link, .pages #grid #add-element .add-element-link, #page-gallery #grid #add-element #add-element-link, #page-gallery #grid #add-element .add-element-link, #user-pages #grid #add-element #add-element-link, #user-pages #grid #add-element .add-element-link, #profile-gallery #grid #add-element #add-element-link, #profile-gallery #grid #add-element .add-element-link, #my-files #grid #add-element #add-element-link, #my-files #grid #add-element .add-element-link {
  color:$text-color;
  &:hover {
              color: $link-color;
            }
    }
    .pages #grid {
     #add-element {
        #add-element-icon{
          color:$icon-color;
        }
    }

    .media-bottom a.bottom-link{
      color:$icon-color;
      &:hover {
              color: $text-color;
            }
    }
    .media-content {
      .page-create-date {
        color: $text-color;
      }
    }
  }

  #my-files #grid #add-element .add-element-link {
      color: $link-color;
  }


  .pages #grid .media-content .media-body .media-heading a.heading-link {
      color: $link-color;
      font-weight: bold;
      text-decoration: underline;
  }

  .pages #grid .media-content .media-body .visibility-icon {
    color:$grey;
  }

  #assertion-info th{
    color: $link-color;
  }

  .message-item.media {
    .date {
      color: $text-color;
    }
  }
  .form-bar-success{
    border-color: $titlebar-color;
  }
}
/* ... */

